--- a/src/components/HeaderComponent.css
+++ b/src/components/HeaderComponent.css
@@ -1,13 +1,14 @@
 .navbar-brand{
-    display: relative;
+    display: fixed;
     padding-left: 49%;
     margin: 0 auto, 0 auto;
 }
 
 .myClass{
-    display: absolute;
+    display: fixed;
     font-size: large;
     color: aliceblue;
+    margin: 0 auto, 0 auto;
     /* padding-left: 1000%; */
 }
 
@@ -18,7 +19,7 @@ header {
     overflow-x: hidden;
   }
 
-/* body {
+body {
       overflow-x: hidden;
       margin: 0 auto;
-} */
+}
