--- a/src/components/HeaderComponent.css
+++ b/src/components/HeaderComponent.css
@@ -5,9 +5,9 @@
 }
 
 .myClass{
-    display: fixed;
+    display: flexbox;
     font-size: large;
-    color: aliceblue;
+    color: #f0f8ff;
     margin: 0 auto, 0 auto;
     /* padding-left: 1000%; */
 }
